responsive 작업 완료

--- a/sub1.html
+++ b/sub1.html
@@ -27,7 +27,7 @@
 
 <div id="wrap">
 	<div class="videoBox">
-			<img src="./images/sub1_big.jpg" id="imgBG" alt="">
+			<img src="./images/sub1_big.jpg" id="imgBG" alt="배경이미지">
 			<a class="down" href="#">
 				<div></div>
 			</a>
@@ -59,7 +59,7 @@
 			<div class="his_top" data-aos="fade-up" data-aos-duration="2000">
 				<ul>
 					<li class="img">
-						<img src="./images/sub1/top1.jpg" alt="">
+						<img src="./images/sub1/top1.jpg" alt="이미지">
 						<div>
 							<span>
 								NATIONAL<br>
@@ -70,7 +70,7 @@
 						</div>
 					</li>
 					<li class="top2 img">
-						<img src="./images/sub1/top2.jpg" alt="">
+						<img src="./images/sub1/top2.jpg" alt="이미지">
 						<div>
 							<span>
 								EXPLORE<br>
@@ -81,7 +81,7 @@
 						</div>
 					</li>
 					<li class="img">
-						<img src="./images/sub1/top3.jpg" alt="">
+						<img src="./images/sub1/top3.jpg" alt="이미지">
 						<div>
 							<span>
 								OUT<br>
@@ -105,7 +105,7 @@
 			<div class="his_bottom">
 				<h3>History & Culture</h3>
 				<ul class="con1 bot" data-aos="fade-up" data-aos-duration="2000">
-					<li class="img"><img src="./images/sub1/emu1.jpg" alt=""></li>
+					<li class="img"><img src="./images/sub1/emu1.jpg" alt="이미지"></li>
 					<li>
 						<p>The bizarre story of when Australia went to war with emus—and lost</p>
 					</li>
@@ -135,7 +135,7 @@
 							from one leg to the other. “People love them.”
 						</p>
 					</li>
-					<li class="img"><img src="./images/sub1/emu2.jpg" alt=""></li>
+					<li class="img"><img src="./images/sub1/emu2.jpg" alt="이미지"></li>
 				</ul>
 				<ul class="con2 bot" data-aos="fade-up" data-aos-duration="2000">
 					<li>
@@ -160,9 +160,9 @@
 							</dd>
 						</dl>
 					</li>
-					<li class="img"><img src="./images/sub1/sr1.jpg" alt=""></li>
-					<li class="img"><img src="./images/sub1/sr2.jpg" alt=""></li>
-					<li class="img"><img src="./images/sub1/sr3.jpg" alt=""></li>
+					<li class="img"><img src="./images/sub1/sr1.jpg" alt="이미지"></li>
+					<li class="img"><img src="./images/sub1/sr2.jpg" alt="이미지"></li>
+					<li class="img"><img src="./images/sub1/sr3.jpg" alt="이미지"></li>
 					<li>
 						<dl>
 							<dt>'New Kid on the Block'</dt>
@@ -179,7 +179,7 @@
 				</ul>
 				<div class="bot" data-aos="fade-up" data-aos-duration="2000">
 					<ul class="con3">
-						<li class="img"><img src="./images/sub1/ww1.jpg" alt=""></li>
+						<li class="img"><img src="./images/sub1/ww1.jpg" alt="이미지"></li>
 						<li>
 							<p>83 years after Pearl Harbor, here's how the attack changed history</p>
 						</li>
@@ -200,7 +200,7 @@
 								Congress, had also voted against the U.S. entering into World War I.
 							</p>
 						</li>
-						<li class="img"><img src="./images/sub1/ww2.jpg" alt=""></li>
+						<li class="img"><img src="./images/sub1/ww2.jpg" alt="이미지"></li>
 					</ul>
 					<div class="con3_txt">
 						<p>
@@ -245,10 +245,10 @@
 								</dd>
 							</dl>
 						</li>
-						<li class="img"><img src="./images/sub1/om1.jpg" alt=""></li>
+						<li class="img"><img src="./images/sub1/om1.jpg" alt="이미지"></li>
 					</ul>
 					<ul class="om2">
-						<li class="img"><img src="./images/sub1/om2.jpg" alt=""></li>
+						<li class="img"><img src="./images/sub1/om2.jpg" alt="이미지"></li>
 						<li>
 							<p>After the end of the Roman Empire, however, the symbolism of the Phrygian cap becomes unclear.</p>
 							<p>
@@ -269,7 +269,7 @@
 				</div>
 				<div class="con5 bot" data-aos="fade-up" data-aos-duration="2000">
 					<ul class="mada1">
-						<li class="img"><img src="./images/sub1/mada1.jpg" alt=""></li>
+						<li class="img"><img src="./images/sub1/mada1.jpg" alt="이미지"></li>
 						<li>
 							<dl>
 								<dt>Who built this mysterious settlement in Madagascar?</dt>
@@ -292,9 +292,9 @@
 						</li>
 					</ul>
 					<ul class="mada2">
-						<li class="img"><img src="./images/sub1/mada2.jpg" alt=""></li>
-						<li class="img"><img src="./images/sub1/mada3.jpg" alt=""></li>
-						<li class="img"><img src="./images/sub1/mada4.jpg" alt=""></li>
+						<li class="img"><img src="./images/sub1/mada2.jpg" alt="이미지"></li>
+						<li class="img"><img src="./images/sub1/mada3.jpg" alt="이미지"></li>
+						<li class="img"><img src="./images/sub1/mada4.jpg" alt="이미지"></li>
 					</ul>
 				</div>
 			</div>
