--- a/sub2.html
+++ b/sub2.html
@@ -28,7 +28,7 @@
 
 <div id="wrap">
 	<div class="videoBox">
-			<img src="./images/sub2_big.jpg" id="imgBG" alt="">
+			<img src="./images/sub2_big.jpg" id="imgBG" alt="배경이미지">
 			<a class="down" href="#">
 				<div></div>
 			</a>
@@ -67,7 +67,7 @@
 			</p>
 			<div class="ani">
 				<ul class="ani_con1">
-					<li class="p image-container"><img src="./images/sub2/top1.jpg" alt=""></li>
+					<li class="p image-container"><img src="./images/sub2/top1.jpg" alt="이미지"></li>
 					<li data-aos="fade-right" data-aos-duration="2000">
 						<dl>
 							<dt>In Australia, Aboriginal rangers race to save the last sawfish</dt>
@@ -96,7 +96,7 @@
 					</li>
 				</ul>
 				<ul  class="ani_con2">
-					<li class="p2 image-container"><img src="./images/sub2/top2.jpg" alt=""></li>
+					<li class="p2 image-container"><img src="./images/sub2/top2.jpg" alt="이미지"></li>
 					<li data-aos="fade-left" data-aos-duration="2000">
 						<dl>
 							<dt>Orcas are iconic and beloved. Why do we know so little about them?</dt>
@@ -149,7 +149,7 @@
 					<ul>
 						<li>
 							<a class="popup_youtube" href="https://www.youtube.com/watch?v=4PwDFddpo4c">
-								<img src="./images/sub2/yt1.jpg" alt="">
+								<img src="./images/sub2/yt1.jpg" alt="이미지">
 								<div class="btn">
 									<i class="fa-brands fa-youtube" aria-hidden="true"></i>
 								</div>
@@ -159,7 +159,7 @@
 					<ul>
 						<li>
 							<a class="popup_youtube" href="https://www.youtube.com/watch?v=BF2TZq-ntRQ">
-								<img src="./images/sub2/yt2.jpg" alt="">
+								<img src="./images/sub2/yt2.jpg" alt="이미지">
 								<div class="btn">
 									<i class="fa-brands fa-youtube" aria-hidden="true"></i>
 								</div>
@@ -171,7 +171,7 @@
 					<ul>
 						<li>
 							<a class="popup_youtube" href="https://www.youtube.com/watch?v=VBGjalM1exw">
-								<img src="./images/sub2/yt3.jpg" alt="">
+								<img src="./images/sub2/yt3.jpg" alt="이미지">
 								<div class="btn">
 									<i class="fa-brands fa-youtube" aria-hidden="true"></i>
 								</div>
@@ -181,7 +181,7 @@
 					<ul>
 						<li>
 							<a class="popup_youtube" href="https://www.youtube.com/watch?v=k1I4_jvO4fI">
-								<img src="./images/sub2/yt4.jpg" alt="">
+								<img src="./images/sub2/yt4.jpg" alt="이미지">
 								<div class="btn">
 									<i class="fa-brands fa-youtube" aria-hidden="true"></i>
 								</div>
