--- a/sub3.html
+++ b/sub3.html
@@ -28,7 +28,7 @@
 
 <div id="wrap">
 	<div class="videoBox">
-			<img src="./images/sub3_big.jpg" id="imgBG" alt="">
+			<img src="./images/sub3_big.jpg" id="imgBG" alt="배경이미지">
 			<a class="down" href="#">
 				<div></div>
 			</a>
@@ -97,7 +97,7 @@
 				<ul class="top2">
 					<li>
 						<!-- <div class="img2 full-landing-image"></div> -->
-						<img src="./images/sub3/env2.png" alt="">
+						<img src="./images/sub3/env2.png" alt="이미지">
 						<dl data-aos="zoom-in" data-aos-duration="1000">
 							<dt>The world's plastic pollution crisis, explained</dt>
 							<dd>
@@ -121,7 +121,7 @@
 				<ul class="top1">
 					<li>
 						<!-- <div class="img3 full-landing-image"></div> -->
-						<img src="./images/sub3/env3.png" alt="">
+						<img src="./images/sub3/env3.png" alt="이미지">
 						<dl data-aos="zoom-in" data-aos-duration="1000">
 							<dt>Wildfire season is getting longer—and more intense. Here's how to prepare.</dt>
 							<dd>
@@ -150,7 +150,7 @@
 				<ul class="top2"> 
 					<li>		
 						<!-- <div class="img4 full-landing-image"></div> -->
-						<img src="./images/sub3/env4.png" alt="">
+						<img src="./images/sub3/env4.png" alt="이미지">
 						<dl data-aos="zoom-in" data-aos-duration="1000">
 							<dt>Is tap water safe to drink? Here's what you really need to know.</dt>
 							<dd>
@@ -185,7 +185,7 @@
 						<li>
 							<div class="btn_open">
 								<a href="#">
-									<img src="./images/sub3/env5.jpg" alt="">
+									<img src="./images/sub3/env5.jpg" alt="이미지">
 									<span class="material-symbols-outlined">
 										add_circle
 									</span>
@@ -216,7 +216,7 @@
 						<li class="bot_2n">
 							<div class="btn_open">
 								<a href="#"> 
-									<img src="./images/sub3/env6.jpg" alt="">
+									<img src="./images/sub3/env6.jpg" alt="이미지">
 									<span class="material-symbols-outlined">
 										add_circle
 									</span>
@@ -249,7 +249,7 @@
 						<li>
 							<div class="btn_open">
 								<a href="#">
-									<img src="./images/sub3/env7.jpg" alt="">
+									<img src="./images/sub3/env7.jpg" alt="이미지">
 									<span class="material-symbols-outlined">
 										add_circle
 									</span>
@@ -285,7 +285,7 @@
 						<li class="bot_2n">
 							<div class="btn_open">
 								<a href="#">
-									<img src="./images/sub3/env8.jpg" alt="">
+									<img src="./images/sub3/env8.jpg" alt="이미지">
 									<span class="material-symbols-outlined">
 										add_circle
 									</span>
