--- a/sub4.html
+++ b/sub4.html
@@ -37,7 +37,7 @@
 
 	<div id="wrap">
 		<div class="videoBox">
-			<img src="./images/sub4_big.jpg" id="imgBG" alt="">
+			<img src="./images/sub4_big.jpg" id="imgBG" alt="배경이미지">
 			<a class="down" href="#">
 				<div></div>
 			</a>
@@ -78,12 +78,12 @@
 						<ul class="inner1">
 							<li>
 								<figure>
-									<img src="./images/sub4/star1.jpg" alt="">					
+									<img src="./images/sub4/star1.jpg" alt="이미지">					
 								</figure>
 							</li>
 							<li>
 								<figure>
-									<img src="./images/sub4/star2.jpg" alt="">
+									<img src="./images/sub4/star2.jpg" alt="이미지">
 								</figure>
 								<div>
 									<span>January 18: Saturn and Venus conjunction</span>
@@ -91,7 +91,7 @@
 							</li>
 							<li>
 								<figure>
-									<img src="./images/sub4/star3.jpg" alt="">
+									<img src="./images/sub4/star3.jpg" alt="이미지">
 								</figure>
 								<div>
 									<span>March 14: Total lunar eclipse and blood moon</span>
@@ -104,7 +104,7 @@
 						<ul class="inner2">
 							<li>
 								<figure>
-									<img src="./images/sub4/star4.jpg" alt="">
+									<img src="./images/sub4/star4.jpg" alt="이미지">
 								</figure>
 								<div>
 									<span>December 13 to 14: Geminid meteor shower peaks</span>							
@@ -127,7 +127,7 @@
 							</li>
 							<li>
 								<figure>
-									<img src="./images/sub4/star5.jpg" alt="">
+									<img src="./images/sub4/star5.jpg" alt="이미지">
 								</figure>
 								<div>
 									<span>March 29: Partial solar eclipse</span>							
@@ -137,7 +137,7 @@
 						<ul class="inner3">
 							<li>
 								<figure>
-									<img src="./images/sub4/star6.jpg" alt="">
+									<img src="./images/sub4/star6.jpg" alt="이미지">
 								</figure>
 								<div>
 									<span>September 19: Moon, Venus, and Regulus in celestial group hug</span>							
@@ -146,7 +146,7 @@
 							<li></li>
 							<li>
 								<figure>
-									<img src="./images/sub4/star7.jpg" alt="">
+									<img src="./images/sub4/star7.jpg" alt="이미지">
 								</figure>
 								<div>
 									<span>June 26: Moon and Mercury meet up</span>							
@@ -156,7 +156,7 @@
 						<ul class="inner4">
 							<li>
 								<figure>
-									<img src="./images/sub4/star8.jpg" alt="">
+									<img src="./images/sub4/star8.jpg" alt="이미지">
 								</figure>
 								<div>
 									<span>September 7: Another total lunar eclipse and blood moon</span>
@@ -164,7 +164,7 @@
 							</li>
 							<li>
 								<figure>
-									<img src="./images/sub4/star9.jpg" alt="">
+									<img src="./images/sub4/star9.jpg" alt="이미지">
 								</figure>
 								<div>
 									<span>November 8: Saturn's rings vanish</span>
@@ -172,7 +172,7 @@
 							</li>
 							<li>
 								<figure>
-									<img src="./images/sub4/star10.jpg" alt="">
+									<img src="./images/sub4/star10.jpg" alt="이미지">
 								</figure>
 								<div>
 									<span>August 12: Venus and Jupiter's close encounter</span>
@@ -182,7 +182,7 @@
 					</div>
 					<div class="meteor inner">
 						<ul>
-							<li><img src="./images/sub4/meteor1.jpg" alt=""></li>
+							<li><img src="./images/sub4/meteor1.jpg" alt="이미지"></li>
 							<li>
 								<dl>
 									<dt>The Geminids meteor shower peaks this week—here's what causes them</dt>
@@ -221,13 +221,13 @@
 									gives us the meteor shower.
 								</p>
 							</li>
-							<li><img src="./images/sub4/meteor2.jpg" alt=""></li>
-							<li><img src="./images/sub4/meteor3.jpg" alt=""></li>
+							<li><img src="./images/sub4/meteor2.jpg" alt="이미지"></li>
+							<li><img src="./images/sub4/meteor3.jpg" alt="이미지"></li>
 						</ul>
 					</div>
 					<div class="pneumonia inner">
 						<ul>
-							<li><img src="./images/sub4/pneumonia1.jpg" alt=""></li>
+							<li><img src="./images/sub4/pneumonia1.jpg" alt="이미지"></li>
 							<li>
 								<dl>
 									<dt>There are actually 4 types of pneumonia. These are the differences.</dt>
@@ -264,12 +264,12 @@
 									within days of starting treatment. “The earlier the treatment, the better,” Wu says.
 								</p>
 							</li>
-							<li><img src="./images/sub4/pneumonia2.jpg" alt=""></li>
+							<li><img src="./images/sub4/pneumonia2.jpg" alt="이미지"></li>
 						</ul>
 					</div>
 					<div class="lucy inner">
 						<ul>
-							<li><img src="./images/sub4/lucy1.jpg" alt=""></li>
+							<li><img src="./images/sub4/lucy1.jpg" alt="이미지"></li>
 							<li>
 								<dl>
 									<dt>This is why Lucy has been the face of human evolution for the last 50 years</dt>
@@ -307,12 +307,12 @@
 									she is currently stored in a specially constructed safe.
 								</p>
 							</li>
-							<li><img src="./images/sub4/lucy2.jpg" alt=""></li>
+							<li><img src="./images/sub4/lucy2.jpg" alt="이미지"></li>
 						</ul>
 					</div>
 					<div class="nasa inner">
 						<ul>
-							<li><img src="./images/sub4/nasa1.jpg" alt=""></li>
+							<li><img src="./images/sub4/nasa1.jpg" alt="이미지"></li>
 							<li>
 								<dl>
 									<dt>Europa is an icy ocean world—and NASA is finally going to explore it</dt>
@@ -342,8 +342,8 @@
 									</dd>
 								</dl>
 							</li>
-							<li><img src="./images/sub4/nasa2.jpg" alt=""></li>
-							<li><img src="./images/sub4/nasa3.jpg" alt=""></li>
+							<li><img src="./images/sub4/nasa2.jpg" alt="이미지"></li>
+							<li><img src="./images/sub4/nasa3.jpg" alt="이미지"></li>
 						</ul>
 					</div>
 				</div>
