--- a/sub5.html
+++ b/sub5.html
@@ -27,7 +27,7 @@
 
 <div id="wrap">
 	<div class="videoBox">
-			<img src="./images/sub5_big.jpg" id="imgBG" alt="">
+			<img src="./images/sub5_big.jpg" id="imgBG" alt="배경이미지">
 			<a class="down" href="#">
 				<div></div>
 			</a>
@@ -66,91 +66,91 @@
 			<div class="grid">
 				<div class="grid-sizer"></div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery01.jpg">
+					<img src="images/./sub5/gallery01.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery02.jpg">
+					<img src="images/./sub5/gallery02.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery03.jpg">
+					<img src="images/./sub5/gallery03.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery04.jpg">
+					<img src="images/./sub5/gallery04.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery05.jpg">
+					<img src="images/./sub5/gallery05.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery06.jpg">
+					<img src="images/./sub5/gallery06.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery07.jpg">
+					<img src="images/./sub5/gallery07.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery08.jpg">
+					<img src="images/./sub5/gallery08.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery09.jpg">
+					<img src="images/./sub5/gallery09.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery10.jpg">
+					<img src="images/./sub5/gallery10.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery11.jpg">
+					<img src="images/./sub5/gallery11.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery12.jpg">
+					<img src="images/./sub5/gallery12.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery13.jpg">
+					<img src="images/./sub5/gallery13.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery14.jpg">
+					<img src="images/./sub5/gallery14.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery15.jpg">
+					<img src="images/./sub5/gallery15.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery16.jpg">
+					<img src="images/./sub5/gallery16.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery17.jpg">
+					<img src="images/./sub5/gallery17.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery18.jpg">
+					<img src="images/./sub5/gallery18.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery19.jpg">
+					<img src="images/./sub5/gallery19.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery20.jpg">
+					<img src="images/./sub5/gallery20.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery21.jpg">
+					<img src="images/./sub5/gallery21.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery22.jpg">
+					<img src="images/./sub5/gallery22.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery23.jpg">
+					<img src="images/./sub5/gallery23.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery24.jpg">
+					<img src="images/./sub5/gallery24.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery25.jpg">
+					<img src="images/./sub5/gallery25.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery26.jpg">
+					<img src="images/./sub5/gallery26.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery27.jpg">
+					<img src="images/./sub5/gallery27.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery28.jpg">
+					<img src="images/./sub5/gallery28.jpg" alt="이미지">
 				</div>
 				<div class="grid-item">
-					<img src="images/./sub5/gallery29.jpg">
+					<img src="images/./sub5/gallery29.jpg" alt="이미지">
 				</div>
 			</div>			
 		</section>	
