--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="wrap">
 	<div class="videoBox">
 		    <video autoplay loop muted id="videoBG"></video>
-			<img src="./images/back.jpg" id="imgBG" alt="">
+			<img src="./images/back.jpg" id="imgBG" alt="배경이미지">
 			<a class="down" href="#">
 				<div></div>
 			</a>
@@ -100,7 +100,7 @@
 				<ul>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani1.jpg" alt="">
+							<img src="./images/animals/ani1.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Largetooth sawfish</p>
@@ -118,7 +118,7 @@
 					</li>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani2.jpg" alt="">
+							<img src="./images/animals/ani2.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Seal</p>
@@ -126,7 +126,7 @@
 					</li>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani3.jpg" alt="">
+							<img src="./images/animals/ani3.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Killer whale</p>
@@ -138,7 +138,7 @@
 				<ul>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani4.jpg" alt="">
+							<img src="./images/animals/ani4.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Gorilla</p>
@@ -146,7 +146,7 @@
 					</li>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani5.jpg" alt="">
+							<img src="./images/animals/ani5.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Dog</p>
@@ -154,7 +154,7 @@
 					</li>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani6.jpg" alt="">
+							<img src="./images/animals/ani6.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Manatees</p>
@@ -162,7 +162,7 @@
 					</li>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani7.jpg" alt="">
+							<img src="./images/animals/ani7.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Penguin</p>
@@ -170,7 +170,7 @@
 					</li>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani8.jpg" alt="">
+							<img src="./images/animals/ani8.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Polar bear</p>
@@ -178,7 +178,7 @@
 					</li>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani9.jpg" alt="">
+							<img src="./images/animals/ani9.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Eagles</p>
@@ -186,7 +186,7 @@
 					</li>
 					<li class="ani_txt">					
 						<figure>
-							<img src="./images/animals/ani10.jpg" alt="">
+							<img src="./images/animals/ani10.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Giraffe</p>
@@ -194,7 +194,7 @@
 					</li>
 					<li class="ani_txt">						
 						<figure>
-							<img src="./images/animals/ani11.jpg" alt="">
+							<img src="./images/animals/ani11.jpg" alt="이미지">
 						</figure>
 						<div>
 							<p>Buffalo</p>
@@ -214,7 +214,7 @@
 						<li>							
 							<figure>
 								<div>
-									<img src="./images/environment/env1.jpg" alt="">
+									<img src="./images/environment/env1.jpg" alt="이미지">
 								</div>
 								<div class="env_txt">
 									<span></span>
@@ -228,7 +228,7 @@
 						<li>							
 							<figure>
 								<div>
-									<img src="./images/environment/env2.jpg" alt="">
+									<img src="./images/environment/env2.jpg" alt="이미지">
 								</div>
 								<div class="env_txt">
 									<span></span>
@@ -242,7 +242,7 @@
 						<li>							
 							<figure>
 								<div>
-									<img src="./images/environment/env3.jpg" alt="">
+									<img src="./images/environment/env3.jpg" alt="이미지">
 								</div>
 								<div class="env_txt">
 									<span></span>
@@ -258,7 +258,7 @@
 						<li>							
 							<figure>
 								<div>
-									<img src="./images/environment/env4.jpg" alt="">
+									<img src="./images/environment/env4.jpg" alt="이미지">
 								</div>
 								<div class="env_txt">
 									<span></span>
@@ -285,7 +285,7 @@
 						<li>							
 							<figure>
 								<div>
-									<img src="./images/environment/env5.jpg" alt="">
+									<img src="./images/environment/env5.jpg" alt="이미지">
 								</div>
 								<div class="env_txt">
 									<span></span>
@@ -299,7 +299,7 @@
 						<li>							
 							<figure>
 								<div>
-									<img src="./images/environment/env6.jpg" alt="">
+									<img src="./images/environment/env6.jpg" alt="이미지">
 								</div>
 								<div class="env_txt">
 									<span></span>
@@ -313,7 +313,7 @@
 						<li>							
 							<figure>
 								<div>
-									<img src="./images/environment/env7.jpg" alt="">
+									<img src="./images/environment/env7.jpg" alt="이미지">
 								</div>
 								<div class="env_txt">
 									<span></span>
@@ -327,7 +327,7 @@
 						<li>							
 							<figure>
 								<div>
-									<img src="./images/environment/env8.jpg" alt="">
+									<img src="./images/environment/env8.jpg" alt="이미지">
 								</div>
 								<div class="env_txt">
 									<span></span>
@@ -347,25 +347,25 @@
 			<h3 class="hidden">SCIENCE</h3>			
 			<ul class="sci_inner">
 				<li class="sci_txt">						
-					<img src="./images/science/sci1.jpg" alt="">
+					<img src="./images/science/sci1.jpg" alt="이미지">
 					<div>
 						<p>The Geminids meteor shower peaks this week—here's what causes them</p>
 					</div>						
 				</li>
 				<li class="sci_txt">						
-					<img src="./images/science/sci2.jpg" alt="">
+					<img src="./images/science/sci2.jpg" alt="이미지">
 					<div>
 						<p>This is why Lucy has been the face of human evolution for the last 50 years.</p>
 					</div>						
 				</li>
 				<li class="sci_txt">						
-					<img src="./images/science/sci3.jpg" alt="">
+					<img src="./images/science/sci3.jpg" alt="이미지">
 					<div>
 						<p>There are actually 4 types of pneumonia. These are the differences.</p>
 					</div>						
 				</li>
 				<li class="sci_txt">						
-					<img src="./images/science/sci4.jpg" alt="">
+					<img src="./images/science/sci4.jpg" alt="이미지">
 					<div>
 						<p>Europa is an icy ocean world—and NASA is finally going to explore it.</p>
 					</div>						
@@ -380,7 +380,7 @@
 					<a class="more" href="./sub4.html?num=4" title="science 페이지로 이동">Lead more</a>
 				</li>
 				<li class="sci_txt">						
-					<img src="./images/science/sci5.jpg" alt="">
+					<img src="./images/science/sci5.jpg" alt="이미지">
 					<div>
 						<p>
 							9 must-see night sky events to look forward to in 2025
@@ -398,7 +398,7 @@
 			<h3>GALLERY</h3>
 			<ul>
 				<li>					
-					<img src="./images/gallery/gal1.jpg" alt="">				
+					<img src="./images/gallery/gal1.jpg" alt="이미지">				
 				</li>
 				<li>
 					<p data-aos="zoom-in" data-aos-duration="1000">
@@ -409,22 +409,22 @@
 					<a  class="more" href="./sub5.html?num=5" title="gallery 페이지로 이동">Lead more</a>
 				</li>
 				<li>					
-					<img src="./images/gallery/gal2.jpg" alt="">					
+					<img src="./images/gallery/gal2.jpg" alt="이미지">					
 				</li>
 				<li>				
-					<img src="./images/gallery/gal3.jpg" alt="">					
+					<img src="./images/gallery/gal3.jpg" alt="이미지">					
 				</li>
 				<li>					
-					<img src="./images/gallery/gal4.jpg" alt="">					
+					<img src="./images/gallery/gal4.jpg" alt="이미지">					
 				</li>
 				<li>					
-					<img src="./images/gallery/gal5.jpg" alt="">					
+					<img src="./images/gallery/gal5.jpg" alt="이미지">					
 				</li>
 				<li>					
-					<img src="./images/gallery/gal6.jpg" alt="">				
+					<img src="./images/gallery/gal6.jpg" alt="이미지">				
 				</li>
 				<li>					
-					<img src="./images/gallery/gal7.jpg" alt="">
+					<img src="./images/gallery/gal7.jpg" alt="이미지">
 					<div>
 						<p>
 							National Geographic is a globally renowned media organization known for its focus on science, exploration, education,
@@ -435,16 +435,16 @@
 					</div>				
 				</li>
 				<li>					
-					<img src="./images/gallery/gal8.jpg" alt="">					
+					<img src="./images/gallery/gal8.jpg" alt="이미지">					
 				</li>
 				<li>					
-					<img src="./images/gallery/gal9.jpg" alt="">					
+					<img src="./images/gallery/gal9.jpg" alt="이미지">					
 				</li>
 				<li>					
-					<img src="./images/gallery/gal10.jpg" alt="">
+					<img src="./images/gallery/gal10.jpg" alt="이미지">
 				</li>
 				<li>					
-					<img src="./images/gallery/gal11.jpg" alt="">					
+					<img src="./images/gallery/gal11.jpg" alt="이미지">					
 				</li>
 			</ul>
 		</section>
